--- a/Lectures/Lecture_22-pre.ipynb
+++ b/Lectures/Lecture_22-pre.ipynb
@@ -50,7 +50,9 @@
    "source": [
     "# Clustering\n",
     "\n",
-    "Before we jump into clustering, it's worth doing some theoretical situating. What makes clustering different from the things we've talked about so far?"
+    "Before we jump into clustering, it's worth doing some theoretical situating. \n",
+    "\n",
+    "What makes clustering different from the things we've talked about so far?"
    ]
   },
   {
@@ -65,7 +67,7 @@
     "\n",
     "- ***Supervised* learning**: use existing ($X$, $y$) pairs to learn relationships between $X$ and $y$ that we can apply to new data.\n",
     "    - Examples: regression (continuous response variables) + classification (categorical response variables)\n",
-    "    - Assumptions: features $X$ have systematic relationship to a corresponding \"true\" response variable $y$\n",
+    "    - Assumptions: features $X$ have systematic relationship to a corresponding \"true\" (measurable) response variable $y$\n",
     "    - Procedure: minimize a loss function over predictions of training data\n",
     "    - In practice: requires lots of labeled data, careful procedures for evaluating generalization\n",
     "- ***Unsupervised* learning**: describe structure in our data $X$ without the use of labels or output values $y$. \n",
@@ -73,7 +75,8 @@
     "        - Note these have a kind of parallel structure to regression + classification: clustering looks for categorical structure, dimensionality reduction looks for more continuous structure\n",
     "    - Assumptions: features $X$ have structure but may not map onto a particular response variable $y$\n",
     "    - Procedure: identify candidate *categories* or *low-dimensional representations* in the data without any adherence to predictive accuracy (because there are no labels to predict!)\n",
-    "    - In practice: data no longer needs to be labeled! But can be much harder to evaluate.\n",
+    "        - Note: this means we need other creative ways of assessing model \"fit\"; we'll look at one today\n",
+    "    - In practice: data no longer needs to be labeled! But can be harder to evaluate our models\n",
     "\n",
     "There are lots of resources diving deeper into this distinction online: one nice example [here](https://towardsdatascience.com/supervised-vs-unsupervised-learning-14f68e32ea8d)."
    ]
@@ -101,11 +104,13 @@
     "\n",
     "Instead, they assume that there is deep structure in the ways people watch movies or the music they listen to which may not always correspond to particular *genres* but *is* helpful for organizing their movie library and identifying what people want to see or hear. \n",
     "\n",
-    "Their recommendation systems use **unsupervised clustering and dimensionality reduction** to determine what kind of movies or music people will enjoy. \n",
+    "Their recommendation systems use **unsupervised clustering and dimensionality reduction** to determine what kind of movies or music people will enjoy (note: I haven't seen how Netflix or Spotify solve these problems but this is a fairly safe assumption). \n",
     "\n",
     "For example, Netflix may look for ways of *clustering* their movies based on the movies people tended to watch together, then try to come up with descriptive genres after the fact (\"Heart-warming family movies\" or \"Animated comedies\"). Spotify does similar things when it describes the genres you listen to. \n",
     "\n",
-    "![netflix](img/netflix_genres.png)"
+    "![netflix](img/netflix_genres.png)\n",
+    "\n",
+    "Unsupervised learning is something you encounter all the time in today's tech ecosystem. Other recommendation systems (e.g., Amazon suggesting future purchases) rely on it, as do many other algorithms that have a) rich data and b) complex behaviors or outputs that may be hard to categorize."
    ]
   },
   {
@@ -117,7 +122,17 @@
     "\n",
     "![margaritas](img/k-margs.png)\n",
     "\n",
-    "(Source: [538](https://fivethirtyeight.com/videos/we-got-drunk-on-margaritas-for-science/))"
+    "(Source: [538](https://fivethirtyeight.com/videos/we-got-drunk-on-margaritas-for-science/))\n",
+    "\n",
+    "*Why is this example here?*\n",
+    "\n",
+    "Apart from being kind of funny (and recent), it actually illustrates the appeal of unsupervised clustering really well. \n",
+    "- We don't have pre-existing labels for the different *types* of margaritas out there\n",
+    "- But we do have a lot of recipes, and we *assume* that these recipes might have some natural structure to them in terms of how they balance ingredients\n",
+    "\n",
+    "Because of the above, performing traditional classification on margarita recipes seems hard (and kind of arbitrary). But, if we had some *data-driven* way of determining how the recipes cluster, we could use our human intuitions to better understand the basis for these clusters. \n",
+    "\n",
+    "So, let's see how that works (not with margaritas)!"
    ]
   },
   {
@@ -221,7 +236,12 @@
    "id": "e3f91903",
    "metadata": {},
    "source": [
-    "## \"Brute force\" $k$-means"
+    "## \"Brute force\" $k$-means\n",
+    "\n",
+    "Below, I'm going to walk through some (very clunky) code that implements $k$-means clustering in the `iris` data by *brute force*, assuming there are 3 clusters. \n",
+    "\n",
+    "*Why?* Doing this will illustrate how the steps above in \"plain English\" map onto actual code behaviors (sometimes this mapping is tricky and is in general one of the more challenging things about learning to code, so practice is good!).\n",
+    "\n"
    ]
   },
   {
@@ -231,8 +251,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "# Pick 3 random starting \"centers\"\n",
     "centers = iris.sample(n = 3).reset_index(drop = True)\n",
     "centers\n",
@@ -241,17 +259,18 @@
     "c3 = centers.loc[2, :]\n",
     "\n",
     "# Let's generate our initial cluster assignment\n",
-    "iris['clusters'] = np.repeat(\"c2\", len(iris)) # this is just a stand-in\n",
+    "iris['clusters'] = np.repeat(\"c2\", len(iris)) # this is just a stand-in. Bit hacky...\n",
     "\n",
     "# Keep track of clusters from previous iteration to assess convergence\n",
-    "prev_clusters = np.repeat(\"c1\", len(iris)) # this is just a stand-in\n",
+    "prev_clusters = np.repeat(\"c1\", len(iris)) # this is just a stand-in. Also hacky...\n",
     "\n",
     "# Function to figure out the closest centroid to each data point\n",
     "def get_closest(df):\n",
+    "    # This is just the Euclidean distance from the datapoint in `df` to each centroid c1, c2, and c3\n",
     "    dist1 = np.sqrt(((df.petal_length - c1.petal_length)**2) + ((df.petal_width - c1.petal_width)**2))\n",
     "    dist2 = np.sqrt(((df.petal_length - c2.petal_length)**2) + ((df.petal_width - c2.petal_width)**2))\n",
     "    dist3 = np.sqrt(((df.petal_length - c3.petal_length)**2) + ((df.petal_width - c3.petal_width)**2))\n",
-    "    \n",
+    "    # Now, what's the minimum of the distances above? Return the centroid that is closest\n",
     "    check = min(dist1, dist2, dist3)\n",
     "    if check == dist1:\n",
     "        return \"c1\"\n",
@@ -261,7 +280,7 @@
     "        return \"c3\"\n",
     "\n",
     "# Run actual k-means\n",
-    "iter_num = 0\n",
+    "iter_num = 0 # this is just to keep track of how many times our `while` loop below is running\n",
     "while list(iris.clusters) != list(prev_clusters) and iter_num < 100:\n",
     "    iter_num += 1\n",
     "    prev_clusters = iris['clusters']\n",
@@ -325,7 +344,7 @@
    "source": [
     "One vulnerability of $k$-means clustering is that it can depend on the *seed* or the elements you initially assign to each cluster, which are randomly chosen. \n",
     "\n",
-    "The sklearn solution (below) includes an `n_init` argument with a default value of 10. This run the clustering algorithm 10 consecutive times and chooses the best one according to a metric called *inertia*. \n",
+    "The sklearn solution (below) includes an `n_init` argument with a default value of 10. This runs the clustering algorithm 10 consecutive times and chooses the best one according to a metric called *inertia*. \n",
     "\n",
     "Let's see what else it can do!"
    ]
@@ -379,6 +398,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "87223ad6",
+   "metadata": {},
+   "source": [
+    "**Cluster centers**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c47a8413",
@@ -405,6 +432,14 @@
     "\n",
     "sns.scatterplot(data = iris, x = \"petal_length\", y = \"petal_width\")\n",
     "sns.scatterplot(x = x_center, y = y_center)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76bb9d20",
+   "metadata": {},
+   "source": [
+    "**Labels**"
    ]
   },
   {
@@ -483,6 +518,8 @@
    "id": "ae64f31c",
    "metadata": {},
    "source": [
+    "**Iterations and Intertia**\n",
+    "\n",
     "As we discussed when setting up the algorithm, it runs a certain number of times until *convergence*, and this can vary depending on which elements are chosen as the starting *seeds*. \n",
     "\n",
     "The `KMeans` class has attributes that let you check how it did: in the best run, how many iterations did it do, and how successful were they?\n",
@@ -541,11 +578,15 @@
    "id": "53add025",
    "metadata": {},
    "source": [
-    "## Evaluating $k$-means clustering\n",
+    "## Evaluating $k$-means clustering: how many clusters?\n",
     "\n",
     "The *within cluster sum of squared distance to the center* is one way of evaluating our $k$-means clustering. \n",
     "\n",
-    "The `inertia_` attribute for the `KMeans` class gives us this, as does the `score` function (this gives us negative inertia technically). "
+    "The `inertia_` attribute for the `KMeans` class gives us this, as does the `score` function (this gives us negative inertia technically). \n",
+    "\n",
+    "Below, we plot the inertia for $k$-means going from 1-10 in the `iris` data from above. \n",
+    "\n",
+    "One way to choose the number of clusters is to find the point where our *inertia* isn't getting any lower even as we add more clusters."
    ]
   },
   {
@@ -566,6 +607,26 @@
     "\n",
     "sns.scatterplot(x = kmeans, y = inertias)\n",
     "sns.lineplot(x = kmeans, y = inertias)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "268ff03f",
+   "metadata": {},
+   "source": [
+    "In the figure above, we can see that 2-3 clusters is probably ideal for this data. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aefbb790",
+   "metadata": {},
+   "source": [
+    "# Summary\n",
+    "\n",
+    "This is meant to introduce the idea of unsupervised clustering and give you a feel for how it works with $k$-means clustering. \n",
+    "\n",
+    "In the remainder of this week, we'll follow a similar structure to our regression and classification units: what other clustering solutions are out there and how do we evaluate them?"
    ]
   }
  ],
