--- a/Lectures/Week8_Overview.ipynb
+++ b/Lectures/Week8_Overview.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "**Lecture 22:** Clustering: introduction\n",
     "\n",
-    "**Lecture 23:**\n",
+    "**Lecture 23:** Clustering: evaluation\n",
     "\n",
     "**Lecture 24:**"
    ]
