--- a/Lectures/Lecture_23-post.ipynb
+++ b/Lectures/Lecture_23-post.ipynb
@@ -85,7 +85,7 @@
     "                                          random_state = 1\n",
     "                                         )\n",
     "\n",
-    "sample_vals\n",
+    "# sample_vals\n",
     "# sample_clusters"
    ]
   },
@@ -659,7 +659,7 @@
     "There are a **lot** of different clustering solutions out there; like classification, we could probably have a whole quarter devoted just to clustering. \n",
     "- The sklearn package has classes for many of the most common ones. You can see the full list [here](https://scikit-learn.org/stable/modules/classes.html#module-sklearn.cluster)\n",
     "\n",
-    "We're not going to go through the other solutions out there (there are many, and they're each complex in their own way so we would need a lot more time to cover them. \n",
+    "We're not going to go through the other solutions out there (there are many, and they're each complex in their own way so we would need a lot more time to cover them). \n",
     "\n",
     "However, on Friday we're going to talk about one other solution that is important to be familiar with: **Gaussian mixture models**.\n",
     "- These are a *generalization* of the $k$-means\n",
