--- a/Lectures/Week8_Overview.ipynb
+++ b/Lectures/Week8_Overview.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "**Lecture 23:** Clustering: evaluation\n",
     "\n",
-    "**Lecture 24:**"
+    "**Lecture 24:** Advanced clustering: Gaussian mixture models"
    ]
   }
  ],
