--- a/Lectures/Lecture_1.ipynb
+++ b/Lectures/Lecture_1.ipynb
@@ -2,16 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "92342300",
+   "id": "62c7e6f5",
    "metadata": {},
    "source": [
-    "# Week 9\n",
+    "# Lecture 1 (3/28/2022)\n",
     "\n",
-    "**Lecture 25:** Dimensionality reduction: intro\n",
+    "This lecture was a **course overview** of the powerpoint slides shown inline below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90faf5a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import IFrame\n",
     "\n",
-    "**Lecture 26:**\n",
-    "\n",
-    "**Lecture 27:**"
+    "IFrame(\"Lecture_1-course_overview.pdf\", width = 1000, height = 1000)"
    ]
   }
  ],
