--- a/Lectures/Lecture_25-post.ipynb
+++ b/Lectures/Lecture_25-post.ipynb
@@ -84,7 +84,9 @@
     "\n",
     "*How do you go about doing this?*\n",
     "\n",
-    "..."
+    "- *Feature elimination*: rule out features that aren't as predictive one by one\n",
+    "- *Feature extraction*: create *new* axes that combine the existing features in ways that help describe our data\n",
+    "    - This is what PCA does!"
    ]
   },
   {
