--- a/Lectures/Week9_Overview.ipynb
+++ b/Lectures/Week9_Overview.ipynb
@@ -7,11 +7,11 @@
    "source": [
     "# Week 9\n",
     "\n",
-    "**Lecture 25:** Dimensionality reduction: intro\n",
+    "**Lecture 25:** Dimensionality reduction: intro (PCA)\n",
     "\n",
-    "**Lecture 26:**\n",
+    "**Lecture 26:** Dimensionality reduction: evaluating PCA\n",
     "\n",
-    "**Lecture 27:**"
+    "**Lecture 27:** Dimensionality reduction: other solutions"
    ]
   }
  ],
