--- a/Lectures/Lecture_27-pre.ipynb
+++ b/Lectures/Lecture_27-pre.ipynb
@@ -541,9 +541,7 @@
     "\n",
     "Recall that the iris dataset represents each iris in 4 dimensions (sepal length and width, petal length and width). Since it also has labels (`species`), it's easier to evaluate how successfully the dimensionality reduction techniques manage to preserve or even exaggerate the differences in the target variable.\n",
     "\n",
-    "**If we have time remaining, let's go through the code below and make sure you understand what is happening in each step.** \n",
-    "\n",
-    "If you want to quiz yourself or practice, you can do this on your own as well."
+    "**If we have time remaining, go through the code blocks below and start by trying to solve the problem on your own. You can do all of this with code from earlier in this lecture. If you need a hint, the solution is provided at the bottom of each block.** "
    ]
   },
   {
@@ -553,8 +551,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "iris = sns.load_dataset('iris')\n",
-    "iris"
+    "### INSTRUCTIONS ### \n",
+    "# First, read in the `iris` dataset from seaborn and save it to a variable called 'iris'\n",
+    "###\n",
+    "\n",
+    "\n",
+    "\n",
+    "### YOUR CODE HERE ### \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "### SOLUTION ###\n",
+    "# iris = sns.load_dataset('iris')\n",
+    "# iris"
    ]
   },
   {
@@ -564,14 +579,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fa = FactorAnalyzer()\n",
-    "fa.fit(iris.loc[:, ('sepal_length', 'sepal_width', 'petal_length', 'petal_width')], 4)\n",
+    "### INSTRUCTIONS ### \n",
+    "# Next, fit a factor analysis to the iris predictor columns (sepal length + width, petal length + width)\n",
+    "# Use the FactorAnalyzer class (not the sklearn version)\n",
+    "# Use 4 factors in the factor analysis, then use the FactorAnalyzer `get_eigenvalues` function to extract\n",
+    "# eigenvalues for each factor. Plot these eigenvalues to see how many factors we should use in our analysis.\n",
+    "###\n",
     "\n",
-    "ev, v = fa.get_eigenvalues()\n",
     "\n",
-    "sns.lineplot(x = np.arange(1, 5), y = ev)\n",
-    "plt.axhline(1, c = \"k\", ls = \":\")\n",
-    "plt.show()"
+    "\n",
+    "### YOUR CODE HERE ###\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "### SOLUTION ###\n",
+    "# fa = FactorAnalyzer()\n",
+    "# fa.fit(iris.loc[:, ('sepal_length', 'sepal_width', 'petal_length', 'petal_width')], 4)\n",
+    "# ev, v = fa.get_eigenvalues()\n",
+    "\n",
+    "# sns.lineplot(x = np.arange(1, 5), y = ev)\n",
+    "# plt.axhline(1, c = \"k\", ls = \":\")\n",
+    "# plt.show()"
    ]
   },
   {
@@ -581,19 +615,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cols = ['sepal_length', 'sepal_width', 'petal_length', 'petal_width']\n",
-    "fa = FactorAnalyzer(n_factors = 2, rotation = 'varimax')\n",
-    "fa.fit(iris.loc[:, cols])\n",
+    "### INSTRUCTIONS ###\n",
+    "# Now, fit a factor analysis model to the petal length + width and sepal length + width data from iris,\n",
+    "# using the number of factors you identified above. Use the 'varimax' rotation to ensure interpretable factors.\n",
+    "# Then, plot the \"loadings\" for each of the original columns onto your factors. What do they show?\n",
+    "###\n",
     "\n",
-    "sns.barplot(x = fa.loadings_[:, 0], y = cols)\n",
-    "plt.title(\"Factor 1\")\n",
-    "plt.show()\n",
     "\n",
-    "sns.barplot(x = fa.loadings_[:, 1], y = cols)\n",
-    "plt.title(\"Factor 2\")\n",
-    "plt.show()\n",
     "\n",
-    "fa.loadings_"
+    "### YOUR CODE HERE ###\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "### SOLUTION ### \n",
+    "# cols = ['sepal_length', 'sepal_width', 'petal_length', 'petal_width']\n",
+    "# fa = FactorAnalyzer(n_factors = 2, rotation = 'varimax')\n",
+    "# fa.fit(iris.loc[:, cols])\n",
+    "\n",
+    "# sns.barplot(x = fa.loadings_[:, 0], y = cols)\n",
+    "# plt.title(\"Factor 1\")\n",
+    "# plt.show()\n",
+    "# sns.barplot(x = fa.loadings_[:, 1], y = cols)\n",
+    "# plt.title(\"Factor 2\")\n",
+    "# plt.show()\n",
+    "\n",
+    "# fa.loadings_"
    ]
   },
   {
@@ -603,15 +655,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pca = PCA(n_components = 2, random_state = 0).fit(iris.loc[:, cols])\n",
+    "### INSTRUCTIONS ###\n",
+    "# Now, let's compare the factors you identified above with the principal components of the same data.\n",
+    "# Use the sklearn `PCA` class to extract the principal components of the iris data.\n",
+    "# Use the same 4-dimensional iris data as above (petal length + width, sepal length + width) and \n",
+    "# identify the same number of principal components as factors you selected previously.\n",
+    "# Once you've fit the PCA, plot the weights for each principal component.\n",
+    "# How do they compare to the factor loadings above?\n",
+    "###\n",
     "\n",
-    "sns.barplot(x = pca.components_[0], y = cols)\n",
-    "plt.title(\"PCA Component 1\")\n",
-    "plt.show()\n",
     "\n",
-    "sns.barplot(x = pca.components_[1], y = cols)\n",
-    "plt.title(\"PCA Component 2\")\n",
-    "plt.show()"
+    "\n",
+    "### YOUR CODE HERE ### \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "### SOLUTION ###\n",
+    "# pca = PCA(n_components = 2, random_state = 0).fit(iris.loc[:, cols])\n",
+    "\n",
+    "# sns.barplot(x = pca.components_[0], y = cols)\n",
+    "# plt.title(\"PCA Component 1\")\n",
+    "# plt.show()\n",
+    "\n",
+    "# sns.barplot(x = pca.components_[1], y = cols)\n",
+    "# plt.title(\"PCA Component 2\")\n",
+    "# plt.show()"
    ]
   },
   {
@@ -621,24 +695,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_trans = fa.fit_transform(iris.loc[:, cols])\n",
-    "x_trans\n",
+    "### INSTRUCTIONS ###\n",
+    "# Now, let's see how the iris data looks when transformed onto the two factors you identified with your factor analysis.\n",
+    "# Use the `FactorAnalyzer` `fit_transform` function to transform the 4 iris dimensions (petal and sepal variables)\n",
+    "# onto the two factors. Save these transformed values to a dataframe with \"Factor 1\" and \"Factor 2\" as the columns.\n",
+    "# Next, add the iris \"species\" column to this new dataframe. \n",
+    "# Finally, make a scatterplot with \"Factor 1\" on X, \"Factor 2\" on Y, and the \"species\" value as the hue.\n",
+    "# What do the different species look like when projected onto these two factors?\n",
+    "###\n",
     "\n",
-    "df_trans = pd.DataFrame(x_trans, columns = [\"Factor 1\", \"Factor 2\"])\n",
-    "df_trans['species'] = iris['species']\n",
-    "df_trans\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b0af61ea",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sns.scatterplot(data = df_trans, x = \"Factor 1\", y = \"Factor 2\", hue = \"species\")\n",
-    "plt.show()"
+    "\n",
+    "\n",
+    "### YOUR CODE HERE ###\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "### SOLUTION ### \n",
+    "# x_trans = fa.fit_transform(iris.loc[:, cols])\n",
+    "# df_trans = pd.DataFrame(x_trans, columns = [\"Factor 1\", \"Factor 2\"])\n",
+    "# df_trans['species'] = iris['species']\n",
+    "\n",
+    "# sns.scatterplot(data = df_trans, x = \"Factor 1\", y = \"Factor 2\", hue = \"species\")\n",
+    "# plt.show()"
    ]
   },
   {
@@ -648,15 +732,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_pca = pca.fit_transform(iris.loc[:, cols])\n",
-    "x_pca\n",
+    "### INSTRUCTIONS ###\n",
+    "# Finally, let's compare the low-dimensional representation of the iris data from our factor analysis above\n",
+    "# to what we get from PCA. Below, use the `PCA` `fit_transform` function to project the 4-dimensional iris \n",
+    "# feature variables onto the two principal components you found above. \n",
+    "# Create a new dataframe with these transformed values. Name the columns \"PC 1\" and \"PC 2\".\n",
+    "# Now, add the `species` column from the original iris dataframe to your new dataframe.\n",
+    "# Finally, make a scatterplot of the low dimensional data just as you did above, this time with\n",
+    "# \"PC 1\" on X, \"PC 2\" on Y, and \"species\" as the hue. \n",
+    "# How does this figure compare to the factor analysis results above?\n",
+    "###\n",
     "\n",
-    "df_pca = pd.DataFrame(x_pca, columns = [\"PC 1\", \"PC 2\"])\n",
-    "df_pca['species'] = iris['species']\n",
-    "df_pca\n",
     "\n",
-    "sns.scatterplot(data = df_pca, x = \"PC 1\", y = \"PC 2\", hue = \"species\")\n",
-    "plt.show()"
+    "\n",
+    "### YOUR CODE HERE ###\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "### SOLUTION ###\n",
+    "# x_pca = pca.fit_transform(iris.loc[:, cols])\n",
+    "# df_pca = pd.DataFrame(x_pca, columns = [\"PC 1\", \"PC 2\"])\n",
+    "# df_pca['species'] = iris['species']\n",
+    "\n",
+    "# sns.scatterplot(data = df_pca, x = \"PC 1\", y = \"PC 2\", hue = \"species\")\n",
+    "# plt.show()"
    ]
   }
  ],
