add post script

--- a/Lectures/Lecture_27-post.ipynb
+++ b/Lectures/Lecture_27-post.ipynb
@@ -69,7 +69,8 @@
     "\n",
     "![overview](img/dim_reduction_overview.png)\n",
     "\n",
-    "This graphic comes from a super helpful blog post [here](https://medium.com/p/dcb9500d388b) which I highly recommend! \n",
+    "This graphic comes from a super helpful blog post [here](https://medium.com/p/dcb9500d388b) which I recommend!\n",
+    "- Note: some people draw a sharper distinction between **dimensionality reduction** as the stuff on the right above (creating *new variables* based on our data) and **feature selection** as the stuff on the left (pruning our existing variables to find the best ones); see discussion of that [here](https://towardsdatascience.com/feature-selection-and-dimensionality-reduction-f488d1a035de). I think it's fine to describe the stuff on the left as either dimensionality reduction or feature selection depending on the context, but it's up to you!\n",
     "\n",
     "\n",
     "### Key take-aways\n",
