--- a/Lectures/Lecture_28-post.ipynb
+++ b/Lectures/Lecture_28-post.ipynb
@@ -247,7 +247,9 @@
     "len(ps)\n",
     "\n",
     "spans = soup.find_all('span')\n",
-    "len(spans) # yikes...\n"
+    "len(spans) # yikes...\n",
+    "\n",
+    "# divs"
    ]
   },
   {
@@ -579,7 +581,7 @@
     "# but this time to the API url and with my authentication information included\n",
     "response = requests.request(\"GET\", url, auth=bearer_oauth)\n",
     "\n",
-    "# Here's what I get back\n",
+    "# # Here's what I get back\n",
     "print(response.status_code)\n",
     "print(response.json())\n",
     "\n",
