--- a/Lectures/Week10_Overview.ipynb
+++ b/Lectures/Week10_Overview.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "**Lecture 29:** Final Project Demos! MEET IN ERC 117\n",
     "\n",
-    "**Lecture 30:** Special Topics: APIs"
+    "**Lecture 30:** Special Topics: web scraping and APIs"
    ]
   }
  ],
