--- a/Lectures/Week10_Overview.ipynb
+++ b/Lectures/Week10_Overview.ipynb
@@ -7,11 +7,11 @@
    "source": [
     "# Week 10\n",
     "\n",
-    "**Lecture 28:** NO CLASS (Holiday)\n",
+    "**Mon. 5/30:** NO CLASS (Holiday)\n",
     "\n",
-    "**Lecture 29:** Final Project Demos! MEET IN ERC 117\n",
+    "**Weds. 6/1:** Final Project Demos! MEET IN ERC 117\n",
     "\n",
-    "**Lecture 30:** Special Topics: web scraping and APIs"
+    "**Lecture 28:** Special Topics: web scraping and APIs"
    ]
   }
  ],
